--- a/memos/Trivedi_Meera_progress_memo_2.qmd
+++ b/memos/Trivedi_Meera_progress_memo_2.qmd
@@ -116,7 +116,7 @@ The basic recipe for the forest models is planned to do the same things as the e
 I might experiment in the future with another recipe that perhaps mutates more variables or adds interaction terms so I don't need to remove as many of them as I currently have, but for this progress memo the goal was to stay a bit on the safer side with recipes. It also might be interesting to do what I did for `total_floors` and `floors` for some of the other variables with missingness. Maybe it could help create better models?
 
 #### Model Types
-Since this is a classification problem, the models I will be creating will be: null, logistic, elastic net, nearest neighbors, random forest, and boosted tree. I have already created the first three models and will eventually tune the others. The null model is currently using the basic recipe and then there are two logistic models currently using the basic recipe and the main recipe for non-tree models. For the final project, I believe every model needs to be fit on both the basic recipe and the main recipe, which I will do for the future models as well. Each model type has its own R script that will include the model specifications, workflows, and fits for all models under that type category.
+Since this is a classification problem, the models I will be creating will be: null, logistic, elastic net, nearest neighbors, random forest, and boosted tree. I have already created the first two models and will eventually tune the others. The null model is currently using the basic recipe and then there are two logistic models currently using the basic recipe and the main recipe for non-tree models. For the final project, I believe every model needs to be fit on both the basic recipe and the main recipe, which I will do for the future models as well. Each model type has its own R script that will include the model specifications, workflows, and fits for all models under that type category.
 
 ## Model Analysis
 ```{r}
@@ -171,6 +171,6 @@ log_metrics2 |>
 
 ## Summary of Progress/Potential Issues
 
-Overall I have two recipes done and three model fits created. I have a null model and two logistic models that are being assessed using accuracy and `roc_auc`. Since progress memo 1 I have decided to do things differently to work with the bimodal distribution of my original target variable and the amount of missingness in my data. The main difference is that I have decided to create a new target variable that measures the satisfaction of apartment owners, and I will then use the other variables to predict overall satisfaction. Another issue I had to deal with was missingness. Unfortunately multiple of my predictor variables had many missing values. I suspect they were added as variables because a few apartments had data for them, but if most apartments don’t have data points for those variables, they can’t be useful predictors, which is why I removed most of them from my recipes. As an example, one variable is about the type of energy certificate the apartment has but the most frequent value was “none” meaning that apartment didn’t have an energy certificate. This means having an energy certificate can’t be that useful of a predictor if the majority of apartments either don’t have a certificate or have a missing value for it. I am interested to see how recoding two variables to have levels that say "unknown" will allow me to make conclusions about the data. I'm not sure how location of the apartment in the building, which is what these two variables correspond to, will affect apartment-owner satisfaction but I'm interested to see if missingness can actually help prediction. A otential issue going forward could be creating another recipe that takes a different approach to addressing missingness, since I'm not sure what those steps would result in as of now. Otherwise I have a solid plan of what I want to do: create the tree recipes, create the other models, tuning the models I said I was going to tune, and assess everything as per the instructions. I might do more of an EDA other than just a bargraph for my target variable and I also might make separate results folders to better organize all the fits because eventually I will have a lot. 
+Overall I have two recipes done and three model fits created. I have a null model and two logistic models that are being assessed using accuracy and `roc_auc`. Since progress memo 1 I have decided to do things differently to work with the bimodal distribution of my original target variable and the amount of missingness in my data. The main difference is that I have decided to create a new target variable that measures the satisfaction of apartment owners, and I will then use the other variables to predict overall satisfaction. Another issue I had to deal with was missingness. Unfortunately multiple of my predictor variables had many missing values. I suspect they were added as variables because a few apartments had data for them, but if most apartments don’t have data points for those variables, they can’t be useful predictors, which is why I removed most of them from my recipes. As an example, one variable is about the type of energy certificate the apartment has but the most frequent value was “none” meaning that apartment didn’t have an energy certificate. This means having an energy certificate can’t be that useful of a predictor if the majority of apartments either don’t have a certificate or have a missing value for it. I am interested to see how re-coding two variables to have levels that say "unknown" will allow me to make conclusions about the data. I'm not sure how location of the apartment in the building, which is what these two variables correspond to, will affect apartment-owner satisfaction but I'm interested to see if missingness can actually help prediction. A potential issue going forward could be creating another recipe that takes a different approach to addressing missingness, since I'm not sure what those steps would result in as of now. Otherwise I have a solid plan of what I want to do: create the tree recipes, create the other models, tuning the models I said I was going to tune, and assess everything as per the instructions. I might do more of an EDA other than just a bargraph for my target variable and I also might make separate results folders to better organize all the fits because eventually I will have a lot. 
 
 
